syntax = "proto3";

package iyarkov2.chat.api;

import "google/protobuf/timestamp.proto";
import "version.proto";

option (version) = "1.0.3";

message ConnectRequest {
    string name = 1;
}

message ConnectResponse {
    enum Status {
        SUCCESS = 0;
        NAME_TAKEN = 1;
    }
    Status status = 1;
    int32 user_id = 2;
}

message PostRequest {
    int32  client_id = 1;
    string text = 2;
    google.protobuf.Timestamp ts = 3;
}

message PostResponse {
    int32  id = 1;
    int32 user_id = 2;
    string text = 3;
}

// The greeter service definition.
service ChatService {

    rpc Connect (ConnectRequest) returns (ConnectResponse);

    rpc Post(stream PostRequest) returns (stream PostResponse);
}
